<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sexbook</string>

    <!-- FONTS -->
    <string name="font1" translatable="false">franklin_gothic.ttf</string>
    <string name="font1Bold" translatable="false">franklin_gothic_bold.ttf</string>

    <!-- GLOBAL -->
    <string name="sOpen">Open</string>
    <string name="close">Close</string>
    <string name="toExit">Double tap to exit&#8230;</string>
    <string-array name="jMonths" translatable="false">
        <item>Far</item>
        <item>Ord</item>
        <item>Kho</item>
        <item>Tir</item>
        <item>Mor</item>
        <item>Sha</item>
        <item>Meh</item>
        <item>Aba</item>
        <item>Aza</item>
        <item>Dey</item>
        <item>Bah</item>
        <item>Esf</item>
    </string-array>
    <string-array name="jMonthsFull" translatable="false">
        <item>Farvardin</item>
        <item>Ordibehesht</item>
        <item>Khordad</item>
        <item>Tir</item>
        <item>Mordad</item>
        <item>Shahrivar</item>
        <item>Mehr</item>
        <item>Aban</item>
        <item>Azar</item>
        <item>Dey</item>
        <item>Bahman</item>
        <item>Esfand</item>
    </string-array>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="excStat">Plus %s excluded from statisticisation.</string>
    <string name="unknown">Plus %s from unknown people.</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="estimated">Plus %s estimated items.</string>
    <string-array name="types">
        <item>Wet Dream</item>
        <item>Masturbation</item>
        <item>Oral Sex</item>
        <item>Anal Sex</item>
        <item>Vaginal Sex</item>
    </string-array>
    <string-array name="calendarTypes">
        <item>Gregorian</item>
        <item>Persian</item>
    </string-array>
    <string name="shrAdd">Add New Record</string>
    <string name="delete">Delete</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="bHappyTitle">Happy %s\'s Birthday!</string>
    <string name="bHappyBef" tools:ignore="PluralsCandidate">%d hour(s) remaining to their birthday!</string>
    <string name="bHappyAft" tools:ignore="PluralsCandidate">%d hour(s) past since their birthday!</string>
    <string name="birthDateNtf">Birthday Notification</string>
    <string name="clear">Clear</string>

    <!-- Main -->
    <string name="momSum">Summary</string>
    <string name="momPop">Popularity</string>
    <string name="momGrw">Growth</string>
    <string name="momRec">Recency</string>
    <string name="momImport">Import from Json</string>
    <string name="momExport">Export to Json</string>
    <string name="momSettings">Settings</string>
    <string name="exportDone">Done!</string>
    <string name="exportUndone">Failed!</string>
    <string name="importDone">Done!</string>
    <string name="importOpenError">Unfortunately an error occurred while opening the file!</string>
    <string name="importReadError">Unfortunately an error occurred while reading the file!</string>
    <string name="noRecords">You have no records yet!</string>
    <string name="askImport">Are you sure you want to replace all the app data?</string>
    <string name="findChip">Find a crush&#8230;</string>

    <!-- Page Sex -->
    <string name="mrvNotesHint" translatable="false">.....</string>
    <string name="lcAccurate">Accurate?</string>
    <string name="desc">Write descriptions&#8230;</string>
    <string name="recEstimated">[ESTIMATED]</string>

    <!-- Page Love -->
    <string name="crushes">List of Crushes</string>
    <string name="emptyLove">After adding some sex records, go to Navigation Menu -> Summary -> Select a crush -> Hit the top right button with a \"Person\" (Identification) icon.</string>
    <string name="lcStatistics">Statistics</string>

    <!-- Identification -->
    <string name="identify">Identification</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="masculine">Man</string>
    <string name="feminine">Woman</string>
    <string name="height">Height (cm)</string>
    <string name="birth">Birth Date</string>
    <string name="location">Location</string>
    <string name="notifyBirth">Notify me in their birthday</string>
    <string name="crushClear">Clear Information: %s</string>
    <string name="crushClearSure">Are you sure you want to clear this person\'s information? (THIS DOES NOT INCLUDE THE SEX RECORDS!)</string>

    <!-- Places -->
    <string name="places">Places</string>
    <string name="plItemHint">Place name&#8230;</string>
    <string name="plDeletePlaceSure">Are you sure you want to delete this place?</string>
    <string name="plDefPlace">Default Place?</string>

    <!-- Estimation -->
    <string name="estimation">Estimation</string>
    <string name="etDateHint" translatable="false" />
    <string name="etSince">Since</string>
    <string name="etUntil">Until</string>
    <string name="etFreq">Times Per Day</string>
    <string name="etDeleteGuessSure">Are you sure you want to delete this estimation?</string>

    <!-- Settings -->
    <string name="stTitle">Sexbook Settings</string>
    <string name="stCalendarType">Calendar Type</string>
    <string name="stStatSince">Statisticise Since</string>
    <string name="stReset">Reset Settings</string>
    <string name="stResetSure">Are you sure you want to all the settings back to default?</string>
    <string name="stTruncate">Remove All Data</string>
    <string name="stTruncateSure">Are you sure you want to remove all your personal data?</string>


    <!-- JDTP -->
    <string name="jdtp_day_picker_description">Month grid of days</string>
    <string name="jdtp_year_picker_description">Year list</string>
    <string name="jdtp_select_day">Select month and day</string>
    <string name="jdtp_select_year">Select year</string>
    <string name="jdtp_item_is_selected">"%s selected"</string>



    <!-- Pattern for the v1 month and year string (localised) -->
    <string name="mdtp_date_v1_monthyear">MMMM yyyy</string>
    <!-- Pattern for the v2 day month and year string (localised) -->
    <string name="mdtp_date_v2_daymonthyear">EEE, MMM dd</string>

    <!-- Label for date or time [CHAR LIMIT=30] -->
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_ok">@android:string/ok</string>
    <string name="mdtp_cancel">@android:string/cancel</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <!--
         Content description for the second selector in the time picker, which displays
         selectable five-second intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_second_picker_description">Seconds circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_minutes">Select minutes</string>
    <!-- Accessibility announcement for second circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_seconds">Select seconds</string>

    <string name="mdtp_date">Date</string>
    <string name="mdtp_time">Time</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="mdtp_year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="mdtp_item_is_selected"><xliff:g id="item" example="2013">%1$s</xliff:g> selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="mdtp_deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>
    <!-- Accessibility announcement for the month arrows in the day picker -->
    <string name="mdtp_next_month_arrow_description">Next Month</string>
    <string name="mdtp_previous_month_arrow_description">Previous Month</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_time_placeholder" translatable="false">00</string>
    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_time_separator" translatable="false">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_radial_numbers_typeface" translatable="false">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_sans_serif" translatable="false">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_day_of_week_label_typeface" translatable="false">sans-serif-light</string>

    <string name="mdtp_am">am</string>
    <string name="mdtp_pm">pm</string>
</resources>
