<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/momSum"
        android:icon="@drawable/summary_1"
        android:title="@string/momSum"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/momPop"
        android:title="@string/momPop" />
    <item
        android:id="@+id/momRec"
        android:title="@string/momRec" />
    <item
        android:id="@+id/momExport"
        android:title="@string/momExport" />
    <item
        android:id="@+id/momImport"
        android:title="@string/momImport" />
    <item
        android:id="@+id/momExportExcel"
        android:title="@string/momExportExcel" />
    <item
        android:id="@+id/momSettings"
        android:title="@string/momSettings" />
</menu>