<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Autofill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/identifyET"
            android:hint="@string/firstName"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />

        <EditText
            style="@style/identifyET"
            android:hint="@string/lastName"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/identifyField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/masculine" />

        <EditText
            style="@style/identifyET"
            android:hint="@string/height"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />

        <EditText
            style="@style/identifyET"
            android:hint="@string/instagram"
            android:inputType="textUri"
            android:maxLength="100"
            android:maxLines="1" />
    </LinearLayout>
</ScrollView>