<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/body"
    tools:context=".Settings"
    tools:ignore="MissingConstraints">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:title="@string/stTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout style="@style/stItem">

                <TextView
                    style="@style/stItemTV"
                    android:text="@string/stCalendarType" />

                <Spinner
                    android:id="@+id/stCalendarType"
                    style="@style/stItemTweak" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/stTruncate"
                style="@style/stItem">

                <TextView
                    style="@style/stItemTV"
                    android:text="@string/stTruncate" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <View style="@style/tbShadow" />
</androidx.constraintlayout.widget.ConstraintLayout>