<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="6dp"
    android:background="@drawable/yellow_box"
    android:paddingVertical="9dp"
    tools:ignore="Autofill,ContentDescription,LabelFor,MissingConstraints">

    <TextView
        android:id="@+id/sincLabel"
        style="@style/etDateLabel"
        android:layout_marginStart="20dp"
        android:text="@string/etSince"
        app:layout_constraintBottom_toBottomOf="@id/sinc"
        app:layout_constraintTop_toTopOf="@id/sinc" />

    <TextView
        android:id="@+id/sinc"
        style="@style/etDateButton"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@id/sincLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tillLabel"
        style="@style/etDateLabel"
        android:layout_marginStart="20dp"
        android:text="@string/etUntil"
        app:layout_constraintBottom_toBottomOf="@id/till"
        app:layout_constraintTop_toTopOf="@id/till" />

    <TextView
        android:id="@+id/till"
        style="@style/etDateButton"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@id/tillLabel"
        app:layout_constraintTop_toBottomOf="@id/sinc" />

    <TextView
        android:id="@+id/freqLabel"
        style="@style/etDateLabel"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/etFreq"
        app:layout_constraintBottom_toBottomOf="@id/freq"
        app:layout_constraintTop_toTopOf="@id/freq" />

    <EditText
        android:id="@+id/freq"
        android:layout_width="0dp"
        android:layout_height="30sp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginVertical="15sp"
        android:background="@color/tp"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textColor="@color/mrvDate"
        android:textIsSelectable="true"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/type"
        app:layout_constraintStart_toEndOf="@id/freqLabel"
        app:layout_constraintTop_toBottomOf="@id/till" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="@id/freq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/freq" />

    <EditText
        android:id="@+id/desc"
        style="@style/desc"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/freq" />

    <Spinner
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spn_filter"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:theme="@style/AppTheme"
        app:layout_constraintTop_toBottomOf="@id/desc" />

    <ImageView
        android:id="@+id/placeMark"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="20dp"
        android:rotation="90"
        android:src="@drawable/play_3_ntf"
        app:layout_constraintBottom_toBottomOf="@id/place"
        app:layout_constraintEnd_toEndOf="@id/place"
        app:layout_constraintTop_toTopOf="@id/place" />
</androidx.constraintlayout.widget.ConstraintLayout>